# osiris

./: .gdbinit  .gitignore  Cargo.toml  Makefile  README.md  Xargo.toml  boot.asm  env.sh  gdb.py  gdb.sh  gdbgui.sh  multiboot_header.asm  x86_64-osiris.json
src/: interrupts.rs  lateinit.rs  lib.rs  main.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  grub.cfg  high_init.asm  linker.ld  long_init.asm  multiboot2.h  multiboot_header.asm  relocate_kernel.asm  remap_page_table.c  remap_stack.asm
src/cpuid/: features.rs  mod.rs
src/interrupts/: gdt.rs  mod.rs
src/io/: apic.rs  mod.rs  scan_code.rs
src/memory/: area_frame_allocator.rs  bump_allocator.rs  frame.rs  frame_allocator.rs  frame_set.rs  mem_info.rs  mod.rs  nop_allocator.rs  stack_allocator.rs  stack_frame_set.rs
src/memory/frame_allocator/: area_frame_allocator.rs  bootstrap_frame_allocator.rs  mod.rs  nop_allocator.rs  nop_frame_allocator.rs
src/memory/frame_set/: empty_set.rs  mod.rs  stack_set.rs  vec_set.rs
src/memory/paging/: active_page_table.rs  entry.rs  inactive_page_table.rs  mapper.rs  mod.rs  page.rs  table.rs  temporary_page.rs
