[package]
name = "osiris"
version = "0.1.0"
authors = ["Nathan Perry <avaglir@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0"
volatile = "0.1.0"
spin = "0.4.5"
multiboot2 = "0.1.0"
bitflags = "0.9.1"
x86_64 = "0.1.2"
once = "0.3.3"
linked_list_allocator = "0.5.0"
bit_field = "0.7.0"
failure = { version = "0.1.1", default-features = false, features = ["derive"] }
failure_derive = { version = "0.1.1", default-features = false }
itertools = { version = "0.7.6", default-features = false }

[dependencies.lazy_static]
version = "0.2.4"
features = ["spin_no_std"]

[patch.crates-io]
failure = { git = "https://github.com/mammothbane/failure" }
