[package]
name = "osiris"
version = "0.1.0"
authors = ["Nathan Perry <avaglir@gmail.com>"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
rlibc = "1.0"
volatile = "0.1.0"
spin = "0.4.5"
bitflags = "0.9.1"
x86_64 = "0.1.2"
once = "0.3.3"
linked_list_allocator = "0.6.1"
os_bootinfo = "0.2.0"
bit_field = "0.7.0"
failure = { version = "0.1.1", default-features = false, features = ["derive"] }
failure_derive = { version = "0.1.1", default-features = false }
itertools = { version = "0.7.6", default-features = false }
fixedvec = "0.2"
lateinit = "0.1"
raw-cpuid = "3.1"

[dependencies.lazy_static]
version = "0.2.4"
features = ["spin_no_std"]

[package.metadata.bootimage]
default-target = "x86_64-osiris"
minimum-image-size = 0
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-m", "1G", "-monitor", "stdio"]
output = "build/kernel.bin"

[package.metadata.bootimage.bootloader]
precompiled = true
name = "bootloader"
git = "https://github.com/mammothbane/bootloader"

[patch.crates-io]
failure = { git = "https://github.com/mammothbane/failure" }
linked_list_allocator = { git = "https://github.com/mammothbane/linked-list-allocator" }
os_bootinfo = { git = "https://github.com/mammothbane/os_bootinfo" }
